# socket_prac

./: .env.example  .gitignore  CMakeLists.txt  README.md  bootstrap_ubuntu.sh  ca.crt.pem  vcpkg.json
apps/: client.cpp  server.cpp
config/: server.conf  test_db.conf  test_suite.conf  test_tls.conf
include/: acceptor.hpp  addr.hpp  chat_client.hpp  ep_helper.hpp  epoll_acceptor.hpp  epoll_listener.hpp  epoll_registry.hpp  epoll_server.hpp  epoll_utility.hpp  epoll_wakeup.hpp  error_code.hpp  event_loop.hpp  fd_helper.hpp  io_helper.hpp  server_factory.hpp  session.hpp  unique_fd.hpp
include/client/: chat_client.hpp  chat_executor.hpp  chat_io_worker.hpp  console_output.hpp
include/core/: config_loader.hpp  constant.hpp  error_code.hpp  logger.hpp  path_util.hpp  thread_pool.hpp  unique_fd.hpp
include/database/: db_connector.hpp  db_executor.hpp  db_service.hpp
include/net/: addr.hpp  fd_helper.hpp  io_helper.hpp  tls_context.hpp  tls_error.hpp  tls_session.hpp
include/protocol/: command_codec.hpp  line_parser.hpp
include/reactor/: epoll_registry.hpp  epoll_utility.hpp  epoll_wakeup.hpp  event_loop.hpp
include/server/: epoll_acceptor.hpp  epoll_listener.hpp  epoll_server.hpp
include/socket_prac/client/: chat_client.hpp
include/socket_prac/net/: addr.hpp  fd_helper.hpp  io_helper.hpp
include/socket_prac/reactor/: epoll_registry.hpp  epoll_utility.hpp  epoll_wakeup.hpp  event_loop.hpp
include/socket_prac/server/: epoll_acceptor.hpp  epoll_listener.hpp  epoll_server.hpp
scripts/: build_server.sh  deploy_aws_ubuntu.sh  generate_tls_certs.sh  migrate_db_schema.sh  provision_db_role.sh  test_db_connection.sh  test_db_friend_features.sh  test_integration.sh  test_server_graceful_shutdown.sh  test_tls_cert_mismatch.sh  test_tls_common.sh  test_tls_concurrent_longrun.sh  test_tls_expired_cert.sh  test_tls_forced_termination.sh  test_tls_normal_connection.sh  test_tls_plaintext_reject.sh  test_tls_reconnect_stress.sh
scripts/lib/: common.sh  pg.sh
scripts/test/: test_db_connection.sh  test_db_friend_features.sh  test_db_room_features.sh  test_integration.sh  test_server_graceful_shutdown.sh  test_tls_cert_mismatch.sh  test_tls_common.sh  test_tls_concurrent_longrun.sh  test_tls_expired_cert.sh  test_tls_forced_termination.sh  test_tls_normal_connection.sh  test_tls_plaintext_reject.sh  test_tls_reconnect_stress.sh
src/: acceptor.cpp  addr.cpp  chat_client.cpp  ep_helper.cpp  epoll_acceptor.cpp  epoll_listener.cpp  epoll_registry.cpp  epoll_server.cpp  epoll_utility.cpp  epoll_wakeup.cpp  error_code.cpp  event_loop.cpp  fd_helper.cpp  io_helper.cpp  server_factory.cpp  session.cpp  unique_fd.cpp
src/client/: chat_client.cpp  chat_executor.cpp  chat_io_worker.cpp
src/core/: config_loader.cpp  error_code.cpp  logger.cpp  path_util.cpp  thread_pool.cpp  unique_fd.cpp
src/database/: db_connector.cpp  db_executor.cpp  db_service.cpp
src/net/: addr.cpp  fd_helper.cpp  io_helper.cpp  tls_context.cpp  tls_error.cpp  tls_session.cpp
src/protocol/: command_codec.cpp  line_parser.cpp
src/reactor/: epoll_registry.cpp  epoll_utility.cpp  epoll_wakeup.cpp  event_loop.cpp
src/server/: epoll_acceptor.cpp  epoll_listener.cpp  epoll_server.cpp
sync_echo_server/: server.cpp
